--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,6 +10,6 @@
   <p><strong>Effective Date:</strong> October 7, 2025</p>
   <p>This extension, <em>Annotator</em>, does not collect, store, or transmit any personal data. All annotations and actions occur entirely within your browser and are not shared or saved externally.</p>
   <p>No browsing history, personal information, or website content is accessed by this extension.</p>
-  <p>For questions or support, contact: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+  <p>For questions or support, contact: <a href="mailto:hutch.hoskins@clay.kyschools.us">hutch.hoskins@clay.kyschools.us</a></p>
 </body>
 </html>
